agregado metodo de consultar todas las salas
